# MAS-project

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
runs/: trace_approval_required_high_cost.jsonl  trace_missing_forecast_evidence.jsonl  trace_normal_demand.jsonl  trace_supplier_expedite_required.jsonl  trace_transfer_solves_stockout.jsonl  trace_unsafe_price_blocked.jsonl
scenarios/: approval_required_high_cost.json  missing_forecast_evidence.json  normal_demand.json  supplier_expedite_required.json  transfer_solves_stockout.json  unsafe_price_blocked.json
src/: __init__.py  agents.py  blackboard.py  coordinator.py  evaluation.py  guardrails.py  run_demo.py  schemas.py  simulator.py  tools.py  tracing.py
tests/: test_scenarios.py
